# prolog.hs

./: .gitignore  LICENSE  README.md  prolog-hs.cabal
app/: Main.hs
examples/: die.pl  go_to_hell.pl
src/: DataType.hs  Interpreter.hs  Parser.hs
test/: TestInterpreter.hs  TestParser.hs
