cabal-version:      2.4
name:               prolog-hs
version:            0.1.0.0

author:             myazakky
maintainer:         nimuc@outlook.com

extra-source-files:
    README.md

executable prolog-hs
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0,
                      parsec
    other-modules:    Interpreter,
                      Parser,
                      DataType
    hs-source-dirs:   app, src
    default-language: Haskell2010

library
    hs-source-dirs:     src
    exposed-modules:    DataType,
                        Interpreter,
                        Parser
    build-depends:      base,
                        parsec

    default-language:    Haskell2010

Test-Suite test-interpreter
  Type:                 exitcode-stdio-1.0
  hs-source-dirs:       test, src
  other-modules:        DataType, Interpreter
  Main-is:              TestInterpreter.hs
  Build-depends:        base, HUnit
  default-language: Haskell2010

Test-Suite test-parser
  Type:                 exitcode-stdio-1.0
  ghc-options:          -main-is TestParser
  hs-source-dirs:       test, src
  other-modules:        DataType, Interpreter, Parser
  main-is:              TestParser.hs
  Build-depends:        base,
                        HUnit,
                        parsec,
  default-language: Haskell2010
